syntax = "proto3";

package hello;

option go_package = "pb/";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service Hello {
  rpc Hello(google.protobuf.Empty) returns (HelloResponse) {}
}

message HelloResponse {
  int32 id = 1;
  google.protobuf.Any value1 = 2;
  google.protobuf.Any value2 = 3;
  google.protobuf.Any value3 = 4;
}